--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav class="page-nav">
          <a href="./index.html" class="header-title"><span class="title-accent">Web</span>Studio</a>
             <ul class="nav-list">
-                <li class="nav-item"><a href="#" class="nav-item-link nav-item-studio">Studio</a></li>
+                <li class="nav-item"><a href="#" class="nav-item-link current nav-item-studio">Studio</a></li>
                 <li class="nav-item"><a href="#" class="nav-item-link">Portfolio</a></li>
                 <li class="nav-item"><a href="#" class="nav-item-link">Contacts</a></li>
             </ul>
@@ -58,30 +58,48 @@
 <h2 class="visually-hidden">Our Features</h2>
 <ul class="features-list">
     <li class="features-item">
+<div class="features-icons">
+                <svg class="features-icons-item">
+            <use href="./images/icons.svg#icon-antenna" width="64" height="64"></use>
+        </svg>
+</div>
         <h3 class="features-item-title">Strategy</h3>
         <p class="features-item-text">Our goal is to identify the business
 problem to walk away with the perfect and creative solution.
         </p>
     </li>
     <li class="features-item">
+<div class="features-icons">
+                <svg class="features-icons-item">
+            <use href="./images/icons.svg#icon-clock" width="64" height="64"></use>
+        </svg>
+        </div>
         <h3 class="features-item-title">Punctuality</h3>
         <p class="features-item-text">Bring the key message to the brand's audience for the best price within the shortest possible time.
         </p>
     </li>
     <li class="features-item">
+<div class="features-icons">
+                <svg class="features-icons-item">
+            <use href="./images/icons.svg#icon-diagram" width="64" height="64"></use>
+        </svg>
+        </div>
         <h3 class="features-item-title">Diligence</h3>
         <p class="features-item-text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.
-
         </p>
     </li>
     <li class="features-item">
+        <div class="features-icons">
+                <svg class="features-icons-item">    
+            <use href="./images/icons.svg#icon-astronaut" width="64" height="64"></use>
+            </svg>
+            </div>
         <h3 class="features-item-title">Technologies</h3>
         <p class="features-item-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
 
         </p>
     </li>
 </ul>
-</div>
 </section>
 <!-- #endregion features -->
 <!-- #region team -->
@@ -94,6 +112,36 @@ problem to walk away with the perfect and creative solution.
 <div class="team-content">
         <h3 class="employe-name">Mark Guerrero</h3>
         <p class="employe-position">Product Designer</p>
+        <ul class="social-icons-list">
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                 <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-instagram" width="16" height="16"></use>
+        </svg>
+    </a>
+            </li>
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-group" width="16" height="16"></use>
+        </svg>
+        </a>
+            </li>
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-facebook" width="16" height="16"></use>
+        </svg>
+        </a>
+            </li>
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-linkedin" width="16" height="16"></use>
+        </svg>
+        </a>
+            </li>
+        </ul>
         </div>
     </li>
     <li class="our-team-item">
@@ -101,6 +149,36 @@ problem to walk away with the perfect and creative solution.
 <div class="team-content">
         <h3 class="employe-name">Tom Ford</h3>
         <p class="employe-position">Frontend Developer</p>
+         <ul class="social-icons-list">
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                 <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-instagram" width="16" height="16"></use>
+        </svg>
+    </a>
+            </li>
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-group" width="16" height="16"></use>
+        </svg>
+        </a>
+            </li>
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-facebook" width="16" height="16"></use>
+        </svg>
+        </a>
+            </li>
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-linkedin" width="16" height="16"></use>
+        </svg>
+        </a>
+            </li>
+        </ul>
         </div>
     </li>
     <li class="our-team-item">
@@ -108,6 +186,36 @@ problem to walk away with the perfect and creative solution.
 <div class="team-content">
         <h3 class="employe-name">Camila Garcia</h3>
         <p class="employe-position">Marketing</p>
+         <ul class="social-icons-list">
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                 <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-instagram" width="16" height="16"></use>
+        </svg>
+    </a>
+            </li>
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-group" width="16" height="16"></use>
+        </svg>
+        </a>
+            </li>
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-facebook" width="16" height="16"></use>
+        </svg>
+        </a>
+            </li>
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-linkedin" width="16" height="16"></use>
+        </svg>
+        </a>
+            </li>
+        </ul>
         </div>
     </li>
     <li class="our-team-item">
@@ -115,6 +223,36 @@ problem to walk away with the perfect and creative solution.
         <div class="team-content">
         <h3 class="employe-name">Daniel Wilson</h3>
         <p class="employe-position">UI Designer</p>
+         <ul class="social-icons-list">
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                 <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-instagram" width="16" height="16"></use>
+        </svg>
+    </a>
+            </li>
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-group" width="16" height="16"></use>
+        </svg>
+        </a>
+            </li>
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-facebook" width="16" height="16"></use>
+        </svg>
+        </a>
+            </li>
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-linkedin" width="16" height="16"></use>
+        </svg>
+        </a>
+            </li>
+        </ul>
         </div>
     </li>
 </ul>
@@ -124,44 +262,80 @@ problem to walk away with the perfect and creative solution.
     <div class="container">
     <h2 class="portfolio-title">Our Portfolio</h2>
     <ul class="portfolio-list">
+        
         <li class="portfolio-list-item">
-            <img src="./images/our1.jpg" alt="banking app" width="360" height="300" class="portfolio-item-image">
+            <div class="portfolio-thumb"><img src="./images/our1.jpg" alt="banking app" width="360" height="300" class="portfolio-item-image">
+                 <p class="portfolio-overlay">
+      14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+      Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+    </p>
+    </div>
             <div class="portfolio-content">
             <h3 class="portfolio-item-title">Banking App</h3> 
             <p class="portfolio-item-text">App</p>
             </div>
         </li>
         <li class="portfolio-list-item">
-            <img src="./images/our2.jpg" alt="cashless payment" width="360" height="300" class="portfolio-item-image">
+    <div class="portfolio-thumb">        
+    <img src="./images/our2.jpg" alt="cashless payment" width="360" height="300" class="portfolio-item-image">
+    <p class="portfolio-overlay">
+      14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+      Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+    </p>
+    </div>
             <div class="portfolio-content">
             <h3 class="portfolio-item-title">Cashless Payment</h3> 
             <p class="portfolio-item-text">Marketing</p>
         </div>
         </li>
         <li class="portfolio-list-item">
+            <div class="portfolio-thumb">
             <img src="./images/our3.jpg" alt="meditation app" width="360" height="300" class="portfolio-item-image">
+            <p class="portfolio-overlay">
+      14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+      Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+    </p>
+    </div>
             <div class="portfolio-content">
             <h3 class="portfolio-item-title">Meditation App</h3> 
             <p class="portfolio-item-text">App</p>
             </div>
         </li>
         <li class="portfolio-list-item">
+            <div class="portfolio-thumb">
             <img src="./images/our4.jpg" alt="taxi driver" width="360" height="300" class="portfolio-item-image">
+            <p class="portfolio-overlay">
+      14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+      Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+    </p>
+    </div>
             <div class="portfolio-content">
             <h3 class="portfolio-item-title">Taxi Service</h3> 
             <p class="portfolio-item-text">Marketing</p>
             </div>
         </li>
         <li class="portfolio-list-item">
+            <div class="portfolio-thumb">
             <img src="./images/our5.jpg" alt="phone screen illustrations" width="360" height="300" class="portfolio-item-image">
-<div class="portfolio-content">
+<p class="portfolio-overlay">
+      14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+      Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+    </p>
+    </div>
+            <div class="portfolio-content">
             <h3 class="portfolio-item-title">Screen Illustrations</h3> 
             <p class="portfolio-item-text">Design</p>
             </div>
         </li>
         <li class="portfolio-list-item">
-            <img src="./images/our6.jpg" alt="female studying" width="360" height="300" class="portfolio-item-image">
-            <div class="portfolio-content">
+            <div class="portfolio-thumb">
+                <img src="./images/our6.jpg" alt="female studying" width="360" height="300" class="portfolio-item-image">
+            <p class="portfolio-overlay">
+      14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+      Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+    </p>
+    </div>
+                <div class="portfolio-content">
             <h3 class="portfolio-item-title">Online Courses</h3> 
             <p class="portfolio-item-text">Marketing</p>
             </div>
@@ -175,14 +349,46 @@ problem to walk away with the perfect and creative solution.
     <!-- #endregion main -->
     <!-- #region footer -->
     <footer class="footer">
-        <div class="container">
+        <div class="footer-logo">
          <a href="./index.html" class="title-end"><span class="title-accent">Web</span>Studio</a>
       <p class="footer-info">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
-
       </div>
+<div>
+      <h2 class="footer-socials">Social Media</h2>
+       <ul class="social-icons-list">
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                 <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-instagram" width="16" height="16"></use>
+        </svg>
+    </a>
+            </li>
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-group" width="16" height="16"></use>
+        </svg>
+        </a>
+            </li>
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-facebook" width="16" height="16"></use>
+        </svg>
+        </a>
+            </li>
+            <li class="social-icons-item">
+                <a class="social-icons-link" href="">
+                <svg class="social-icons-svg">
+            <use href="./images/icons.svg#icon-linkedin" width="16" height="16"></use>
+        </svg>
+        </a>
+            </li>
+        </ul>
+        </div>
     </footer>
     <!-- #endregion footer -->
 </body>
