--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <ul class="features-list">
     <li class="features-item">
 <div class="features-icons">
-                <svg class="features-icons-item">
-            <use href="./images/icons.svg#icon-antenna" width="64" height="64"></use>
+                <svg class="features-icons-item" width="64" height="64">
+            <use href="./images/icons.svg#icon-antenna"></use>
         </svg>
 </div>
         <h3 class="features-item-title">Strategy</h3>
@@ -70,8 +70,8 @@ problem to walk away with the perfect and creative solution.
     </li>
     <li class="features-item">
 <div class="features-icons">
-                <svg class="features-icons-item">
-            <use href="./images/icons.svg#icon-clock" width="64" height="64"></use>
+                <svg class="features-icons-item" width="64" height="64">
+            <use href="./images/icons.svg#icon-clock"></use>
         </svg>
         </div>
         <h3 class="features-item-title">Punctuality</h3>
@@ -80,8 +80,8 @@ problem to walk away with the perfect and creative solution.
     </li>
     <li class="features-item">
 <div class="features-icons">
-                <svg class="features-icons-item">
-            <use href="./images/icons.svg#icon-diagram" width="64" height="64"></use>
+                <svg class="features-icons-item" width="64" height="64">
+            <use href="./images/icons.svg#icon-diagram"></use>
         </svg>
         </div>
         <h3 class="features-item-title">Diligence</h3>
@@ -90,8 +90,8 @@ problem to walk away with the perfect and creative solution.
     </li>
     <li class="features-item">
         <div class="features-icons">
-                <svg class="features-icons-item">    
-            <use href="./images/icons.svg#icon-astronaut" width="64" height="64"></use>
+                <svg class="features-icons-item" width="64" height="64">    
+            <use href="./images/icons.svg#icon-astronaut"></use>
             </svg>
             </div>
         <h3 class="features-item-title">Technologies</h3>
@@ -115,29 +115,29 @@ problem to walk away with the perfect and creative solution.
         <ul class="social-icons-list">
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                 <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-instagram" width="16" height="16"></use>
+                 <svg class="social-icons-svg" width="16" height="16">
+            <use href="./images/icons.svg#icon-instagram"></use>
         </svg>
     </a>
             </li>
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-group" width="16" height="16"></use>
+                <svg class="social-icons-svg" width="16" height="16">
+            <use href="./images/icons.svg#icon-group"></use>
         </svg>
         </a>
             </li>
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-facebook" width="16" height="16"></use>
+                <svg class="social-icons-svg" width="16" height="16">
+            <use href="./images/icons.svg#icon-facebook"></use>
         </svg>
         </a>
             </li>
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-linkedin" width="16" height="16"></use>
+                <svg class="social-icons-svg" width="16" height="16">
+            <use href="./images/icons.svg#icon-linkedin"></use>
         </svg>
         </a>
             </li>
@@ -152,29 +152,29 @@ problem to walk away with the perfect and creative solution.
          <ul class="social-icons-list">
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                 <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-instagram" width="16" height="16"></use>
+                 <svg class="social-icons-svg" width="16" height="16">
+            <use href="./images/icons.svg#icon-instagram"></use>
         </svg>
     </a>
             </li>
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-group" width="16" height="16"></use>
+                <svg class="social-icons-svg" width="16" height="16">
+            <use href="./images/icons.svg#icon-group"></use>
         </svg>
         </a>
             </li>
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-facebook" width="16" height="16"></use>
+                <svg class="social-icons-svg" width="16" height="16">
+            <use href="./images/icons.svg#icon-facebook"></use>
         </svg>
         </a>
             </li>
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-linkedin" width="16" height="16"></use>
+                <svg class="social-icons-svg" width="16" height="16">
+            <use href="./images/icons.svg#icon-linkedin"></use>
         </svg>
         </a>
             </li>
@@ -189,29 +189,29 @@ problem to walk away with the perfect and creative solution.
          <ul class="social-icons-list">
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                 <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-instagram" width="16" height="16"></use>
+                 <svg class="social-icons-svg" width="16" height="16">
+            <use href="./images/icons.svg#icon-instagram"></use>
         </svg>
     </a>
             </li>
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-group" width="16" height="16"></use>
+                <svg class="social-icons-svg" width="16" height="16">
+            <use href="./images/icons.svg#icon-group"></use>
         </svg>
         </a>
             </li>
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-facebook" width="16" height="16"></use>
+                <svg class="social-icons-svg" width="16" height="16">
+            <use href="./images/icons.svg#icon-facebook"></use>
         </svg>
         </a>
             </li>
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-linkedin" width="16" height="16"></use>
+                <svg class="social-icons-svg" width="16" height="16">
+            <use href="./images/icons.svg#icon-linkedin"></use>
         </svg>
         </a>
             </li>
@@ -226,29 +226,29 @@ problem to walk away with the perfect and creative solution.
          <ul class="social-icons-list">
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                 <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-instagram" width="16" height="16"></use>
+                 <svg class="social-icons-svg" width="16" height="16">
+            <use href="./images/icons.svg#icon-instagram"></use>
         </svg>
     </a>
             </li>
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-group" width="16" height="16"></use>
+                <svg class="social-icons-svg" width="16" height="16">
+            <use href="./images/icons.svg#icon-group"></use>
         </svg>
         </a>
             </li>
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-facebook" width="16" height="16"></use>
+                <svg class="social-icons-svg" width="16" height="16">
+            <use href="./images/icons.svg#icon-facebook"></use>
         </svg>
         </a>
             </li>
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-linkedin" width="16" height="16"></use>
+                <svg class="social-icons-svg" width="16" height="16">
+            <use href="./images/icons.svg#icon-linkedin"></use>
         </svg>
         </a>
             </li>
@@ -349,6 +349,7 @@ problem to walk away with the perfect and creative solution.
     <!-- #endregion main -->
     <!-- #region footer -->
     <footer class="footer">
+        <div class="container footer-container">
         <div class="footer-logo">
          <a href="./index.html" class="title-end"><span class="title-accent">Web</span>Studio</a>
       <p class="footer-info">
@@ -361,33 +362,34 @@ problem to walk away with the perfect and creative solution.
        <ul class="social-icons-list">
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                 <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-instagram" width="16" height="16"></use>
+                 <svg class="social-icons-svg" width="24" height="24">
+            <use href="./images/icons.svg#icon-instagram"></use>
         </svg>
     </a>
             </li>
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-group" width="16" height="16"></use>
+                <svg class="social-icons-svg" width="24" height="24">
+            <use href="./images/icons.svg#icon-group"></use>
         </svg>
         </a>
             </li>
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-facebook" width="16" height="16"></use>
+                <svg class="social-icons-svg" width="24" height="24">
+            <use href="./images/icons.svg#icon-facebook"></use>
         </svg>
         </a>
             </li>
             <li class="social-icons-item">
                 <a class="social-icons-link" href="">
-                <svg class="social-icons-svg">
-            <use href="./images/icons.svg#icon-linkedin" width="16" height="16"></use>
+                <svg class="social-icons-svg" width="24" height="24">
+            <use href="./images/icons.svg#icon-linkedin"></use>
         </svg>
         </a>
             </li>
         </ul>
+        </div>
         </div>
     </footer>
     <!-- #endregion footer -->
