--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ problem to walk away with the perfect and creative solution.
         </p>
     </li>
 </ul>
+</div>
 </section>
 <!-- #endregion features -->
 <!-- #region team -->
@@ -358,31 +359,31 @@ problem to walk away with the perfect and creative solution.
       </p>
       </div>
 <div>
-      <h2 class="footer-socials">Social Media</h2>
-       <ul class="social-icons-list">
+      <p class="footer-socials">Social Media</p>
+       <ul class="footer-social-list">
             <li class="social-icons-item">
-                <a class="social-icons-link" href="">
+                <a class="footer-social-link" href="">
                  <svg class="social-icons-svg" width="24" height="24">
             <use href="./images/icons.svg#icon-instagram"></use>
         </svg>
     </a>
             </li>
             <li class="social-icons-item">
-                <a class="social-icons-link" href="">
+                <a class="footer-social-link" href="">
                 <svg class="social-icons-svg" width="24" height="24">
             <use href="./images/icons.svg#icon-group"></use>
         </svg>
         </a>
             </li>
             <li class="social-icons-item">
-                <a class="social-icons-link" href="">
+                <a class="footer-social-link" href="">
                 <svg class="social-icons-svg" width="24" height="24">
             <use href="./images/icons.svg#icon-facebook"></use>
         </svg>
         </a>
             </li>
             <li class="social-icons-item">
-                <a class="social-icons-link" href="">
+                <a class="footer-social-link" href="">
                 <svg class="social-icons-svg" width="24" height="24">
             <use href="./images/icons.svg#icon-linkedin"></use>
         </svg>
