--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ problem to walk away with the perfect and creative solution.
       </p>
       </div>
 <div>
-      <p class="footer-socials">Social Media</p>
+      <p class="footer-socials">Social media</p>
        <ul class="footer-social-list">
             <li class="social-icons-item">
                 <a class="footer-social-link" href="">
